[project]
name = "comfyui-stable-wildcards"
description = "Wildcard implementation that can be reproduced with workflows."
version = "1.1.2"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/DigitalIO/ComfyUI-stable-wildcards"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "digitalio"
DisplayName = "ComfyUI-stable-wildcards"
Icon = ""
